{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player Controls",
            "id": "34993261-9c7b-4ba2-aea8-afacb367f78f",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "ad1880ea-26d1-4ca4-bd86-633aff3cfade",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Direction",
                    "type": "PassThrough",
                    "id": "49444f7b-a7ad-4b55-80f1-b00bc1ef88af",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4ce3c222-8751-4b52-a0ee-03ed3d198850",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f6260775-4bc9-47e5-bd2c-1ed9d13d02b8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b8ab9e52-335b-4d29-9b03-4b0553532f3e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "452dd734-2310-4361-a50c-5116568062fd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8ad834ba-b866-45fc-b131-b8ae11f6a0ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3685359b-01b4-40b2-8d9b-e32171d61173",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a5aa1c32-21a6-4f94-96e8-29ec0999ac12",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "8a38294d-60d2-49e9-997f-ef8e67602d19",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3831e234-24bb-48c4-9cb1-b16bc9dc4ebf",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "374999be-c751-4859-8543-d7fcf5b15c60",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "316ca6c7-fcf8-498b-b440-aaab5ae6474d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "37c8c445-336d-4cfd-bc64-5c8556b117fb",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e971381-5e8e-433c-a698-9d8e47d75853",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=2,y=2)",
                    "groups": "GamePad",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a641c366-2ba7-4526-99e0-5e961421e5f4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.25,y=0.25)",
                    "groups": "Keyboard",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": []
        }
    ]
}